--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {}
     border: 1px dotted #555;
     background-color: rgba(255,255,255,0.1);
     border-radius: 25px;
+    color:green;
 }
 
 
